<resources>
    <string name="app_name">Controller</string>
    <string name="toast_network_error">网络连接异常，请检查网络</string>
    <string name="please_input_num">请输入商品购物编号</string>
    <string name="all_goods">全部商品</string>
    <string name="better_goods">优选商品</string>
    <string name="no_select_goods">没有该编号商品，请重新输入</string>
    <string name="clear_list">清空列表</string>
    <string name="total_price">￥24.50</string>
    <string name="immediate_pay">立即支付60s</string>
    <string name="selct_pay_way">选择支付方式</string>
    <string name="wx_pay_way">微信支付</string>
    <string name="ali_pay_way">支付宝支付</string>
    <string name="cancle_pay">取消支付</string>
    <string name="count_down">取消支付120s</string>
    <string name="return_main">返回首页(120s)</string>
    <string name="sure_to_cancle_pay">您确定要取消支付吗？</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="after_pay">支付成功，请及时取走商品</string>
    <string name="close">关闭5s</string>
    <string name="main">返回首页</string>
    <string name="goods_selecte">已选商品</string>
    <string name="zero">0</string>
    <string name="pay_after">支付成功，请及时取走商品</string>
    <string name="return_main_5">返回首页:5s</string>
    <string name="total_all">共计:</string>
    <string name="total_all_price">共计: ￥21.00</string>
    <string name="price">￥2.50</string>
    <string name="queshao">缺货</string>
    <string name="reset">重置</string>
    <string name="goods_name">同意冰红茶</string>
    <string name="goods_number">A21</string>
    <string name="select_num">X2</string>
    <string name="sub">-</string>
    <string name="add">+</string>
    <string name="all_day">24H 便利店</string>
    <string name="input_pwd">请输入管理员密码</string>
    <string name="pwd_error">* 密码输入错误</string>

</resources>
