<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    tools:context="com.yxkj.controller.fragment.MainFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_772"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/number_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <RelativeLayout
                    android:layout_width="@dimen/px_530"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/px_283"
                            android:layout_height="@dimen/px_56"
                            android:src="@mipmap/logo" />

                        <ImageView
                            android:id="@+id/img_all"
                            android:layout_width="@dimen/px_380"
                            android:layout_height="@dimen/px_200"
                            android:layout_marginTop="@dimen/px_38"
                            android:src="@mipmap/merchandise" />

                        <TextView
                            android:id="@+id/tv_better"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:drawableLeft="@mipmap/ic_launcher"
                            android:gravity="center_vertical"
                            android:text="@string/better_goods"
                            android:visibility="gone" />
                    </LinearLayout>

                    <include
                        android:id="@+id/botom_layout"
                        layout="@layout/include_main_botom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:visibility="gone" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@id/botom_layout"
                        android:background="@color/white"
                        android:visibility="gone" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="@dimen/px_550"
                    android:layout_height="match_parent"
                    android:background="@mipmap/keyboard">

                    <com.yxkj.controller.view.KeyBoardView
                        android:id="@+id/keyboardView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <!--支付页面-->
                    <LinearLayout
                        android:id="@+id/layout_pay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone">
                        <!--支付二维码-->
                        <ImageView
                            android:id="@+id/img_code"
                            android:layout_width="@dimen/px_129"
                            android:layout_height="@dimen/px_129"
                            android:scaleType="fitXY"
                            android:src="@mipmap/banner_center" />

                        <TextView
                            android:id="@+id/tv_count_down"
                            android:layout_width="@dimen/px_386"
                            android:layout_height="@dimen/px_50"
                            android:layout_marginTop="@dimen/px_27"
                            android:background="@drawable/btn_cancle_pay"
                            android:gravity="center"
                            android:text="@string/count_down"
                            android:textColor="@color/white"
                            android:textSize="@dimen/px_26" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout_after_pay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="@dimen/px_155"
                            android:layout_height="@dimen/px_108"
                            android:src="@mipmap/icon_pay" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/px_50"
                            android:gravity="center"
                            android:text="@string/pay_after"
                            android:textColor="@color/color_333333"
                            android:textSize="@dimen/px_30" />

                        <TextView
                            android:id="@+id/tv_close"
                            android:layout_width="@dimen/px_420"
                            android:layout_height="@dimen/px_50"
                            android:layout_marginTop="@dimen/px_25"
                            android:background="@drawable/btn_cancle_pay"
                            android:gravity="center"
                            android:text="@string/return_main_5"
                            android:textColor="@color/white"
                            android:textSize="@dimen/px_30" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/layout_canclePay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/color_20000000"
                        android:visibility="gone">
                        <!--取消支付弹窗-->
                        <com.yxkj.controller.view.CanclePayView
                            android:id="@+id/view_cancle_pay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/exit_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_50000000"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <com.yxkj.controller.view.InputPwdView
                    android:id="@+id/input_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_200"
            android:background="@mipmap/shelf"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_left"
                android:layout_width="@dimen/px_340"
                android:layout_height="@dimen/px_166"
                android:scaleType="fitXY"
                android:src="@mipmap/banner_left" />

            <ImageView
                android:id="@+id/img_center"
                android:layout_width="@dimen/px_340"
                android:layout_height="@dimen/px_166"
                android:layout_marginLeft="@dimen/px_16"
                android:scaleType="fitXY"
                android:src="@mipmap/banner_center" />

            <ImageView
                android:id="@+id/img_right"
                android:layout_width="@dimen/px_340"
                android:layout_height="@dimen/px_166"
                android:layout_marginLeft="@dimen/px_16"
                android:scaleType="fitXY"
                android:src="@mipmap/banner_right" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
